# cg_portfolio_tracker

./: .gitignore  LICENSE  README.md  cg_portfolio.json  pyproject.toml  requirements.txt
src/modules/: color_terminal.py
src/portfolio_tracker/: __main__.py  app.py  cli.py
