[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "cg_portfolio_tracker"
version = "1.0.0"
description = "Track you crypto portfolio using CoinGecko data."
readme = "README.md"
authors = [{ name = "qf3l3k", email = "qf3l3k@chaintools.tech" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["command", "monitoring"]
dependencies = [
    'build==0.8.0',
    'colorama==0.4.5',
    'packaging==21.3',
    'pep517==0.13.0',
    'prettytable==3.4.1',
    'pyparsing==3.0.9',
    'tomli==2.0.1',
    'wcwidth==0.2.5'
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ChainTools-Tech/cg_portfolio_tracker"

[project.scripts]
cg_portfolio_tracker = "portfolio_tracker.__main__:main"
